--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   padding: 20px;
+  font-family: "Zen Dots", sans-serif;
+  background: linear-gradient(to bottom, #000428, #004e92);
+  color: #fff;
 }
 
 .chrono-container {
@@ -15,8 +18,9 @@
   color: #0f0;
   padding: 20px 40px;
   border-radius: 10px;
-  font-family: monospace;
   font-size: 2.5em;
+  font-family: monospace;
+  font-style: normal;
 }
 
 .chrono h2 {
